--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@apollo/client": "^3.0.0",
+    "apollo-angular": "^2.2.0",
+    "graphql": "^15.0.0",
+    "ng-dynamic": "^3.0.2",
+    "ngx-monaco-editor": "^9.0.0",
     "rxjs": "~6.6.0",
+    "subscriptions-transport-ws": "^0.9.18",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -37,6 +43,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "monaco-graphql": "^0.4.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
