--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "@apollo/client": "^3.0.0",
+    "angular-split": "^5.0.0",
     "apollo-angular": "^2.2.0",
     "graphql": "^15.0.0",
     "ng-dynamic": "^3.0.2",
