Open / Close editor

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,13 @@
               },
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.json",
+              "src/site.webmanifest.json",
+              "src/android-chrome-192x192.png",
+              "src/android-chrome-384x384.png",
+              "src/apple-touch-icon.png",
+              "src/favicon-32x32.png",
+              "src/mstile-150x150.png",
+              "src/safari-pinned-tab.png",
               "src/favicon.png"
             ],
             "styles": ["src/styles.scss"],
